--- a/setup/format.tex
+++ b/setup/format.tex
@@ -125,7 +125,10 @@
         \vskip-1ex%
         \if@tempswa\else\vskip-.3cm\fi% set inside beamercolorbox... evil here...
     \end{beamercolorbox}%
-  }
+}
+  
+% 设置页边距
+%\setbeamersize{text margin left=1mm,text margin right=1mm}   
 
 % 设置列表符号
 \setbeamertemplate{itemize item}{\scriptsize\raise1.25pt\hbox{\donotcoloroutermaths \ding{42}}}%$\blacktriangleright$}}
