修订系统报告用错了2018的图

--- a/main.tex
+++ b/main.tex
@@ -871,8 +871,8 @@
       \end{itemize}
     \end{itemize}
     \begin{center}
-      %\includegraphics[width=0.5\textwidth]{win7/12texstudiooptions11}\\
-      \includegraphics[width=0.75\textwidth]{ubuntu/texstudio-help-checklatex}      
+      \includegraphics[width=0.9\textwidth]{win7/13texstudiohelpchecklatex}\\
+      %\includegraphics[width=0.75\textwidth]{ubuntu/texstudio-help-checklatex}      
     \end{center}
   \end{spacing}
 \end{frame}
@@ -963,6 +963,10 @@
 \end{thebibliography}
 \end{multicols}
 \end{spacing}
+\end{frame}
+
+\begin{frame}[standout,plain]
+  ...
 \end{frame}
 
 \end{document}
