添加Mac机器安装说明。

--- a/main.tex
+++ b/main.tex
@@ -894,13 +894,256 @@
   \end{spacing}
 \end{frame}
 
-\begin{frame}[standout,plain]
-  Mac OS X...\\
-  俺没有，没有进行测试\\
-  欢迎补充
+% \begin{frame}[standout,plain]
+%   Mac OS X...\\
+%   俺没有，没有进行测试\\
+%   欢迎补充
+% \end{frame}
+
+\section[Mac平台]{Mac平台下安装\tl}
+\begin{frame}{安装\tl}{Mac平台}
+  \begin{spacing}{1.0}
+  \begin{itemize}
+  \item 下载
+    \begin{itemize}
+    \item http://www.tug.org/mactex/\link{http://www.tug.org/mactex/mactex-download.html}
+      \begin{itemize}
+      \item 单击\alert{MacTeX}下载链接
+      \end{itemize}
+    \end{itemize}
+  \end{itemize}
+  \end{spacing}
+  \centering
+  \includegraphics[width=0.9\textwidth]{mac/1}
+  % \begin{annotatedFigure}
+  %   {\includegraphics[width=0.9\textwidth]{mac/1}}
+  %   \annotatedFigureBox{0.04,0.577}{0.285,0.62}{blue}
+  % \end{annotatedFigure}
 \end{frame}
 
-\section[参考文献]{参考文献}
+
+\begin{frame}{安装\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 下载
+    \begin{itemize}
+    \item
+      http://www.tug.org/mactex/\link{http://www.tug.org/mactex/mactex-download.html}
+      \begin{itemize}
+      \item 开始下载
+      \end{itemize}      
+    \end{itemize}
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/2}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+\begin{frame}[standout,plain]
+  Downloading...
+\end{frame}
+
+
+\begin{frame}{安装\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 点击下载的pkg文件
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/3}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+\begin{frame}{安装\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 点击继续
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/4}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+\begin{frame}{安装\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 点击继续
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/5}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+\begin{frame}{安装\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 点击继续
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/6}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+\begin{frame}{安装\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 点击同意
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/7}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+\begin{frame}{安装\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 点击继续
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/8}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+\begin{frame}{安装\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 点击安装
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/9}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+\begin{frame}{安装\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 输入密码
+   \begin{itemize}
+      \item 安装软件
+      \end{itemize} 
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/10}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+
+
+\begin{frame}{安装\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 正在安装
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/11}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+\begin{frame}{安装\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 安装成功
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/12}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+\begin{frame}{设置\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item Launch图标
+  \end{itemize}
+  \centering
+  \vfill
+  \includegraphics[width=0.85\textwidth]{mac/13}
+  \vfill
+  %\stretchoff
+\end{frame}
+
+\begin{frame}{设置\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 运行TeXShop
+    \begin{itemize}
+        \item 选择排版程序
+     \end{itemize}
+  \end{itemize}
+  \begin{center}    
+    \includegraphics[height=0.55\textheight]{mac/14}
+    \includegraphics[height=0.55\textheight]{mac/15}
+  \end{center}
+\end{frame}
+
+\begin{frame}{设置\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 点击TeXShop
+    \begin{itemize}
+        \item 点击偏好设置
+     \end{itemize}
+  \end{itemize}
+  \begin{center}    
+    \includegraphics[height=0.55\textheight]{mac/16}
+    \includegraphics[height=0.55\textheight]{mac/17}
+  \end{center}
+\end{frame}
+
+\begin{frame}{运行\tl}{Mac平台}
+  %\stretchon
+  \begin{itemize}
+  \item 点击TeXShop
+    \begin{itemize}
+        \item 点击偏好设置
+     \end{itemize}
+  \end{itemize}
+  \begin{center}    
+    \includegraphics[height=0.55\textheight]{mac/16}
+    \includegraphics[height=0.55\textheight]{mac/17}
+  \end{center}
+\end{frame}
+
+\begin{frame}{运行\tl}{Mac平台}
+  \begin{spacing}{1.5}
+    \begin{itemize}
+    \item 排版
+        \begin{itemize}
+        \item 选择\keys{XeLatex}，然后点击\keys{排版}
+        \item 在运行平台\keys{console}中编译tex文件
+        \item 生成pdf文件
+        \end{itemize}
+    \end{itemize}
+    \begin{center}
+      \includegraphics[height=0.4\textheight]{mac/18}
+      \includegraphics[height=0.4\textheight]{mac/19}
+      \includegraphics[height=0.4\textheight]{mac/20}
+    \end{center}
+  \end{spacing}         
+\end{frame}
+
+%\section[参考文献]{参考文献}
 \begin{frame}[fragile]{参考文献}{学无止境\footnote[frame,1]{感谢现代
       \LaTeX 入门讲座作者曾祥东的汇总整理，本文中的{\textbackslash link}等
       命令也来自该文档，在此一并对作者致以衷心的感谢！}}
